--- a/index.html
+++ b/index.html
@@ -279,7 +279,9 @@
             </div>
         </footer>
     </div>
+
     <script src="js/burger.js"></script>
+    <script src="js/select-footer.js"></script>
 </body>
 
 </html>
